[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/ChatBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/LogInPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Lobby.gd" type="Script" id=4]

[node name="Lobby" type="Node2D"]
script = ExtResource( 4 )

[node name="ChatBox" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 272.0
margin_top = 560.0
margin_right = 751.0
margin_bottom = 598.0

[node name="LogInPanel" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 224.891
margin_right = 699.0
margin_bottom = 351.891
popup_exclusive = true
[connection signal="focus_entered" from="ChatBox" to="." method="_on_ChatBox_focus_entered"]
[connection signal="textSent" from="ChatBox" to="." method="_on_ChatBox_textSent"]
[connection signal="draw" from="LogInPanel" to="." method="_on_LogInPanel_draw"]
[connection signal="popup_hide" from="LogInPanel" to="." method="_on_LogInPanel_popup_hide"]
